--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Wes Dawson</title>
+  <title>Wes Dawson | Web Developer</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
@@ -20,11 +20,11 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body>
 
   <!-- Navigation -->
   <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-trasparent navbar-inverse navbar-fixed-top navbar-inner" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Wesley Dawson</a>
+          <a class="navbar-brand" href="#">Logo Here</a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
@@ -58,13 +58,13 @@
       </div>
   </section>
   <!-- Section 2 -->
-  <section id="home" data-speed="4" data-type="background">
+  <section id="about" data-speed="4" data-type="background">
       <div class="container">
           More content goes here!
       </div>
   </section>
   <!-- Section 3 -->
-  <section id="about" data-speed="2" data-type="background">
+  <section id="contact" data-speed="2" data-type="background">
       <div class="container">
           This is the final section!
       </div>
