--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,9 @@
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -18,6 +21,7 @@
   <![endif]-->
 
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script src="js/jquery.min.js"></script>
 
 </head>
 <body>
@@ -33,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Logo Here</a>
+          <a class="navbar-brand" href="#"><i class="fa fa-universal-access" aria-hidden="true"></i></a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
@@ -51,22 +55,70 @@
 
 
   <!-- Section 1 -->
-  <section id="intro" data-speed="6" data-type="background">
+  <section id="intro" data-speed="7" data-type="background">
       <div class="container">
-          <h1 style="color:white;">Wesley Dawson</h1>
-          <p style="color:white;">web developer</p>
+        <div class="row">
+        <div class="col-md-6 col-md-offset-3 brand-heading">
+          <h1 >Wesley Dawson</h1>
+          <h4>web developer</h4>
+        </div>
+      </div>
       </div>
   </section>
   <!-- Section 2 -->
   <section id="about" data-speed="4" data-type="background">
-      <div class="container">
-          More content goes here!
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10 col-md-12">
+          <div class="row">
+            <div class="col-xs-8 col-sm-6 col-md-8">
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+              <br>
+
+              <!-- PROJECTS -->
+              <div class="col-md-112">
+                <div class="row">
+                <div class="col-md-4 col-md-offset-3">
+                  <h2>Projects</h2>
+                </div>
+              </div>
+
+                <div class="row">
+                  <div class="col-md-5">
+                    <img src="../images/project-rob.png" alt="..." class="img-responsive thumbnail">
+                  </div>
+                  <div class="col-md-5">
+                    <img src="../images/project-wes.png" alt="..." class="img-responsive thumbnail">
+                  </div>
+                </div>
+              </div>
+              <!-- PROJECTS END -->
+
+            </div>
+            <div class="col-md-1">
+            </div>
+
+            <!-- PROFILE PHOTO -->
+            <div class="col-xs-4 col-sm-6 col-md-3">
+              <img src="../images/profile.jpg" class="img-responsive thumbnail">
+            </div>
+            <!-- PROFILE END -->
+
+          </div>
+        </div>
       </div>
+    </div>
   </section>
   <!-- Section 3 -->
-  <section id="contact" data-speed="2" data-type="background">
+  <section id="contact" data-speed="5" data-type="background">
       <div class="container">
-          This is the final section!
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <h2>contact</h2>
+          </div>
+        </div>
       </div>
   </section>
 
