--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,8 @@
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/scrolling-nav.css" type="text/css" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -21,49 +23,63 @@
   <![endif]-->
 
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script src="js/jquery.min.js"></script>
+
 
 </head>
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
   <!-- Navigation -->
-  <div class="container">
-    <nav class="navbar navbar-trasparent navbar-inverse navbar-fixed-top navbar-inner" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-universal-access" aria-hidden="true"></i></a>
-        </div>
+          <div class="navbar-header page-scroll">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+          </div>
 
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+              <ul class="nav navbar-nav">
+                  <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                  <li class="hidden">
+                      <a class="page-scroll" href="#page-top"></a>
+                  </li>
+                  <li>
+                      <a class="page-scroll" href="#about">About</a>
+                  </li>
+                  <li>
+                      <a class="page-scroll" href="#services">Services</a>
+                  </li>
+                  <li>
+                      <a class="page-scroll" href="#contact">Contact</a>
+                  </li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
       </div>
-    </nav>
-  </div>
-
-
-
+      <!-- /.container -->
+  </nav>
 
   <!-- Section 1 -->
   <section id="intro" data-speed="7" data-type="background">
-      <div class="container">
-        <div class="row">
+    <div class="container">
+      <div class="row">
         <div class="col-md-6 col-md-offset-3 brand-heading">
           <h1 >Wesley Dawson</h1>
           <h4>web developer</h4>
         </div>
+        <div class="col-md-6 col-md-offset-3">
+          <a href="#about" class="btn btn-circle page-scroll">
+            <i class="fa fa-angle-double-down animated"></i>
+          </a>
+        </div>
+
       </div>
-      </div>
+    </div>
   </section>
   <!-- Section 2 -->
   <section id="about" data-speed="4" data-type="background">
@@ -80,10 +96,10 @@
               <!-- PROJECTS -->
               <div class="col-md-112">
                 <div class="row">
-                <div class="col-md-4 col-md-offset-3">
-                  <h2>Projects</h2>
+                  <div class="col-md-4 col-md-offset-3">
+                    <h2>Projects</h2>
+                  </div>
                 </div>
-              </div>
 
                 <div class="row">
                   <div class="col-md-5">
@@ -121,6 +137,17 @@
         </div>
       </div>
   </section>
+
+  <script src="js/jquery.min.js"></script>
+
+  <!-- Bootstrap Core JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
+
+  <!-- Scrolling Nav JavaScript -->
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="js/scrolling-nav.js"></script>
+
+
 
   <script type="text/javascript">$(document).ready(function(){
      // cache the window object
