button icons animation

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
           <div class="navbar-header page-scroll">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -38,11 +38,11 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+              <a class="navbar-brand page-scroll" href="#page-top">Wesley Dawson</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
               <ul class="nav navbar-nav">
                   <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                   <li class="hidden">
@@ -52,10 +52,13 @@
                       <a class="page-scroll" href="#about">About</a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#services">Services</a>
+                      <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="icon"><i class="fa fa-github animated"></i></a>
+                  </li>
+                  <li>
+                    <a class="icon"><i class="fa fa-linkedin-square animated"></i></a>
                   </li>
               </ul>
           </div>
@@ -68,11 +71,11 @@
   <section id="intro" data-speed="7" data-type="background">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 brand-heading">
-          <h1 >Wesley Dawson</h1>
-          <h4>web developer</h4>
+        <div class="col-md-8 col-md-offset-2 intro">
+          <h1 class="brand-heading" >Wesley Dawson</h1>
+          <h4 class="intro-text">web developer</h4>
         </div>
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 intro">
           <a href="#about" class="btn btn-circle page-scroll">
             <i class="fa fa-angle-double-down animated"></i>
           </a>
