--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,11 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+  <!-- costom styles -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <!-- font styles -->
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
 
 
 </head>
@@ -72,8 +75,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 intro">
-          <h1 class="brand-heading" >Wesley Dawson</h1>
-          <h4 class="intro-text">web developer</h4>
+          <h1 class="brand-heading" >wesley dawson</h1>
+          <h4 class="intro-text">web developer | phoenix az</h4>
         </div>
         <div class="col-md-6 col-md-offset-3 intro">
           <a href="#about" class="btn btn-circle page-scroll">
