--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand page-scroll" href="#page-top">Wesley Dawson</a>
+              <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-code" aria-hidden="true"></i> Wesley Dawson</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
   </nav>
 
   <!-- Section 1 -->
-  <section id="intro" data-speed="7" data-type="background">
+  <section id="intro" data-speed="5" data-type="background">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 intro">
@@ -130,18 +130,40 @@
 
           </div>
         </div>
+        <div class="text-center">
+          <a class="btn btn-default btn-lg page-scroll" href="#contact">Contact me</a>
+        </div>
       </div>
     </div>
   </section>
+
   <!-- Section 3 -->
   <section id="contact" data-speed="5" data-type="background">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <h2>contact</h2>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Contact</h2>
+          <form role="form" id="contactForm">
+            <div class="row">
+              <div class="form-group col-sm-6">
+                <label for="name" class="h4">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter name" required>
+              </div>
+              <div class="form-group col-sm-6">
+                <label for="email" class="h4">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="message" class="h4 ">Message</label>
+              <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
+            </div>
+            <button type="submit" id="form-submit" class="btn btn-default btn-lg pull-right ">Submit</button>
+            <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
+          </form>
         </div>
       </div>
+    </div>
   </section>
 
   <script src="js/jquery.min.js"></script>
