--- a/static/index.html
+++ b/static/index.html
@@ -143,20 +143,20 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <h2>Contact</h2>
-          <form role="form" id="contactForm">
+          <form action="/contact" method="post" role="form" id="contactForm">
             <div class="row">
               <div class="form-group col-sm-6">
                 <label for="name" class="h4">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter name" required>
+                <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
               </div>
               <div class="form-group col-sm-6">
                 <label for="email" class="h4">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
               </div>
             </div>
             <div class="form-group">
               <label for="message" class="h4 ">Message</label>
-              <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
+              <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" name="message" required></textarea>
             </div>
             <button type="submit" id="form-submit" class="btn btn-default btn-lg pull-right ">Submit</button>
             <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
