formspree for contact form

--- a/static/index.html
+++ b/static/index.html
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <h2>Contact</h2>
-          <form action="/contact" method="post" role="form" id="contactForm">
+          <form action="http://formspree.io/wesley.s.dawson@gmail.com" method="post" role="form" id="contactForm">
             <div class="row">
               <div class="form-group col-sm-6">
                 <label for="name" class="h4">Name</label>
