--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <!-- costom styles -->
-  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
   <!-- font styles -->
-  <link rel="stylesheet" type="text/css" href="static/css/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/stylesheet.css">
 
 
 
@@ -109,10 +109,10 @@
 
                 <div class="row">
                   <div class="col-md-5">
-                    <img src="../images/project-rob.png" alt="..." class="img-responsive thumbnail">
+                    <img src="../static/images/project-rob.png" alt="..." class="img-responsive thumbnail">
                   </div>
                   <div class="col-md-5">
-                    <img src="../images/project-wes.png" alt="..." class="img-responsive thumbnail">
+                    <img src="../static/images/project-wes.png" alt="..." class="img-responsive thumbnail">
                   </div>
                 </div>
               </div>
@@ -124,7 +124,7 @@
 
             <!-- PROFILE PHOTO -->
             <div class="col-xs-4 col-sm-6 col-md-3">
-              <img src="../images/profile.jpg" class="img-responsive thumbnail">
+              <img src="../static/images/profile.jpg" class="img-responsive thumbnail">
             </div>
             <!-- PROFILE END -->
 
@@ -166,14 +166,14 @@
     </div>
   </section>
 
-  <script src="static/js/jquery.min.js"></script>
+  <script src="../static/js/jquery.min.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="static/js/bootstrap.min.js"></script>
+  <script src="../static/js/bootstrap.min.js"></script>
 
   <!-- Scrolling Nav JavaScript -->
-  <script src="static/js/jquery.easing.min.js"></script>
-  <script src="static/js/scrolling-nav.js"></script>
+  <script src="../static/js/jquery.easing.min.js"></script>
+  <script src="../static/js/scrolling-nav.js"></script>
 
 
 
