--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Wes Dawson | Web Developer</title>
 
   <!-- Bootstrap -->
-  <link href="../static/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
   <!-- Custom CSS -->
-  <link href="../static/css/scrolling-nav.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../static/css/scrolling-nav.css">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
