--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                   <li>
-                    <a href="https://github.com/wesdawson" class="icon"><i class="fa fa-github animated"></i></a>
+                    <a class="icon"><a  href="https://github.com/wesdawson"><i class="fa fa-github animated"></i></a></a>
                   </li>
                   <li>
                     <a class="icon"><i class="fa fa-linkedin-square animated"></i></a>
