--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                   <li>
                       <a class="page-scroll" href="#contact">Contact</a>
                   </li>
-                  <li>
-                    <a class="icon"><a  href="https://github.com/wesdawson"><i class="fa fa-github animated"></i></a></a>
+                  <li href="https://github.com/wesdawson">
+                    <a class="icon"><i class="fa fa-github animated"></i></a>
                   </li>
                   <li>
                     <a class="icon"><i class="fa fa-linkedin-square animated"></i></a>
