--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Wes Dawson | Web Developer</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/scrolling-nav.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/scrolling-nav.css">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -22,9 +22,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <!-- costom styles -->
-  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
   <!-- font styles -->
-  <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/stylesheet.css">
 
 
 
@@ -103,7 +103,7 @@
 
             <!-- PROFILE PHOTO -->
             <div class="col-xs-4 col-sm-6 col-md-3">
-              <img src="../images/profile.jpg" class="img-responsive thumbnail">
+              <img src="../static/images/profile.jpg" class="img-responsive thumbnail">
             </div>
             <!-- PROFILE END -->
 
@@ -145,14 +145,14 @@
     </div>
   </section>
 
-  <script src="../js/jquery.min.js"></script>
+  <script src="../static/js/jquery.min.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="../js/bootstrap.min.js"></script>
+  <script src="../static/js/bootstrap.min.js"></script>
 
   <!-- Scrolling Nav JavaScript -->
-  <script src="../js/jquery.easing.min.js"></script>
-  <script src="../js/scrolling-nav.js"></script>
+  <script src="../static/js/jquery.easing.min.js"></script>
+  <script src="../static/js/scrolling-nav.js"></script>
 
 
 
