--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
                       <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                   <li>
-                    <a class="icon"><i class="fa fa-github animated"></i></a>
+                    <a href="https://github.com/wesdawson"><i class="fa fa-github "></i></a>
                   </li>
+                  <!--
                   <li>
-                    <a class="icon"><i class="fa fa-linkedin-square animated"></i></a>
+                    <a ><i class="fa fa-linkedin-square"></i></a>
                   </li>
+                -->
               </ul>
           </div>
           <!-- /.navbar-collapse -->
