--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
   </section>
-  <!-- Section 2 -->
+  <!-- Section about -->
   <section id="about" data-speed="4" data-type="background">
     <div class="container">
       <div class="row">
@@ -97,7 +97,9 @@
           <div class="row">
             <div class="col-xs-8 col-sm-6 col-md-8">
 
-              <p class="lead">Hello I'm Wes. I'm an aspiring self-taught web devloper that uses the bootstrap framework to create badass responsive mobile first web apps. </p>
+              <p class="lead">Hello I'm Wes, an aspiring self-taught web devloper eagar to learn collaborate with others to hone my skills to be a full-stack developer.
+              I currently free-lance build single page web apps and am avalible for hire. To best inprove my skills I need to go from hobiest to professional so currently I
+              am seeking a fulltime jr development position. </p>
               <br>
             </div>
             <div class="col-md-1">
@@ -105,7 +107,7 @@
 
             <!-- PROFILE PHOTO -->
             <div class="col-xs-4 col-sm-6 col-md-3">
-              <img src="../static/images/profile.jpg" class="img-responsive thumbnail">
+              <img src="../static/images/profile.jpg" class="img-responsive">
             </div>
             <!-- PROFILE END -->
 
@@ -118,7 +120,28 @@
     </div>
   </section>
 
-  <!-- Section 3 -->
+  <!-- Section projects -->
+  <section id="projects">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 header">
+          <h2>Projects</h2>
+        </div>
+        <div class="col-md-offset-1 col-md-5">
+          <a href="http://fullerhealinghands.com">
+          <img src="../static/images/fullerhealinghands.png" class="img-responsive" />
+          </a>
+        </div>
+        <div class="col-md-5">
+          <a href="http://robertraymagic.com">
+          <img src="../static/images/robraymagic.png" class="img-responsive" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section contact -->
   <section id="contact" data-speed="5" data-type="background">
     <div class="container">
       <div class="row">
